--- a/data/gui/normalStyle.css
+++ b/data/gui/normalStyle.css
@@ -902,6 +902,16 @@ QGraphicsWidget#observationListView  QLabel {
         image: url(:/graphicGui/btTimeRealtime-off.png);
 }
 
+QLineEdit#lineEditSearch {
+	margin: 0px 0px 4px 0px;
+	padding: 4px;
+	padding-left: 32px;
+	background-image: url(:/graphicGui/searchBoxBackground.png);
+	background-repeat: none;
+	background-position: center left;
+	border: none;
+}
+
 /**** The following are used for Satellites ****/
 QListWidget#satellitesList, QListWidget#sourceList {
 		font-size: 8pt;
