--- a/plugins/Satellites/src/gui/satellitesDialog.ui
+++ b/plugins/Satellites/src/gui/satellitesDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>530</width>
-    <height>498</height>
+    <width>528</width>
+    <height>496</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -119,6 +119,9 @@
    </item>
    <item>
     <widget class="QTabWidget" name="tabs">
+     <property name="currentIndex">
+      <number>1</number>
+     </property>
      <property name="documentMode">
       <bool>false</bool>
      </property>
@@ -436,19 +439,7 @@
           <widget class="QComboBox" name="groupsCombo"/>
          </item>
          <item>
-          <widget class="QLineEdit" name="lineEditSearch">
-           <property name="styleSheet">
-            <string notr="true">QLineEdit {
-	margin: 0px 0px 4px 0px;
-	padding: 4px;
-	padding-left: 32px;
-	background-image: url(:/graphicGui/searchBoxBackground.png);
-	background-repeat: none;
-	background-position: center left;
-	border: none;
-}/* Stolen from the #citySearchLineEdit widget. */</string>
-           </property>
-          </widget>
+          <widget class="QLineEdit" name="lineEditSearch"/>
          </item>
          <item>
           <widget class="QListView" name="satellitesList">
