night mode corrections for Satellites, Oculars, Solar System Editor and Telescope Control plugins

--- a/data/gui/guiRes.qrc
+++ b/data/gui/guiRes.qrc
@@ -133,5 +133,6 @@
         <file>normalHtml.css</file>
         <file>normalStyle.css</file>
         <file>tabicon-plugins.png</file>
+        <file>nv_filesave.png</file>
     </qresource>
 </RCC>
