--- a/data/gui/normalStyle.css
+++ b/data/gui/normalStyle.css
@@ -231,6 +231,29 @@ QPushButton:hover#closeStelWindow {
 	background-image: url(:/graphicGui/closeButton-hover.png);
 }
 
+QPushButton#pushButtonMoveSensorUp, QPushButton#pushButtonMoveOcularUp, QPushButton#pushButtonMoveTelescopeUp {
+        image: url(:/graphicGui/spinup.png);
+}
+
+QPushButton#pushButtonMoveSensorDown, QPushButton#pushButtonMoveOcularDown, QPushButton#pushButtonMoveTelescopeDown {
+        image: url(:/graphicGui/spindown.png);
+}
+
+QPushButton#removeSatellitesButton, QPushButton#deleteSourceButton {
+        image: url(:/satellites/bt_delete.png);
+}
+
+QPushButton#addSatellitesButton , QPushButton#addSourceButton {
+        image: url(:/satellites/bt_add.png);
+}
+
+QPushButton#commsButton {
+        image: url(:/satellites/bt_comms_off.png);
+}
+
+QPushButton#saveSatellitesButton {
+        image: url(:/graphicGui/filesave.png);
+}
 
 /**********************************************LocationDialog*******************************************************/
 
@@ -894,7 +917,7 @@ QGraphicsWidget#observationListView  QLabel {
 		font-size: 40px;
 }
 
-#configurationDialogForm QPushButton#screenshotBrowseButton {
+#configurationDialogForm QPushButton#screenshotBrowseButton, QPushButton#pushButtonPickExecutablesDirectory {
         image: url(:/graphicGui/folder.png);
 }
 
