--- a/plugins/Oculars/src/gui/ocularDialog.ui
+++ b/plugins/Oculars/src/gui/ocularDialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>507</width>
+    <width>505</width>
     <height>400</height>
    </rect>
   </property>
@@ -146,6 +146,9 @@
       </property>
       <item>
        <widget class="QTabWidget" name="Tabs">
+        <property name="currentIndex">
+         <number>0</number>
+        </property>
         <widget class="QWidget" name="General">
          <attribute name="title">
           <string>General</string>
@@ -409,10 +412,6 @@
                     <height>24</height>
                    </size>
                   </property>
-                  <property name="icon">
-                   <iconset resource="../../../../data/gui/guiRes.qrc">
-                    <normaloff>:/graphicGui/spinup.png</normaloff>:/graphicGui/spinup.png</iconset>
-                  </property>
                  </widget>
                 </item>
                 <item>
@@ -428,10 +427,6 @@
                     <width>24</width>
                     <height>24</height>
                    </size>
-                  </property>
-                  <property name="icon">
-                   <iconset resource="../../../../data/gui/guiRes.qrc">
-                    <normaloff>:/graphicGui/spindown.png</normaloff>:/graphicGui/spindown.png</iconset>
                   </property>
                  </widget>
                 </item>
@@ -713,10 +708,6 @@
                     <height>24</height>
                    </size>
                   </property>
-                  <property name="icon">
-                   <iconset resource="../../../../data/gui/guiRes.qrc">
-                    <normaloff>:/graphicGui/spinup.png</normaloff>:/graphicGui/spinup.png</iconset>
-                  </property>
                  </widget>
                 </item>
                 <item>
@@ -732,10 +723,6 @@
                     <width>24</width>
                     <height>24</height>
                    </size>
-                  </property>
-                  <property name="icon">
-                   <iconset resource="../../../../data/gui/guiRes.qrc">
-                    <normaloff>:/graphicGui/spindown.png</normaloff>:/graphicGui/spindown.png</iconset>
                   </property>
                  </widget>
                 </item>
@@ -1088,10 +1075,6 @@
                     <height>24</height>
                    </size>
                   </property>
-                  <property name="icon">
-                   <iconset resource="../../../../data/gui/guiRes.qrc">
-                    <normaloff>:/graphicGui/spinup.png</normaloff>:/graphicGui/spinup.png</iconset>
-                  </property>
                  </widget>
                 </item>
                 <item>
@@ -1107,10 +1090,6 @@
                     <width>24</width>
                     <height>24</height>
                    </size>
-                  </property>
-                  <property name="icon">
-                   <iconset resource="../../../../data/gui/guiRes.qrc">
-                    <normaloff>:/graphicGui/spindown.png</normaloff>:/graphicGui/spindown.png</iconset>
                   </property>
                  </widget>
                 </item>
@@ -1300,8 +1279,6 @@
   <tabstop>telescopeVFlip</tabstop>
   <tabstop>textBrowser</tabstop>
  </tabstops>
- <resources>
-  <include location="../../../../data/gui/guiRes.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
