Sun opposition is now largest Sun separation (that separation is also shown now)

--- a/plugins/Observability/src/gui/ObservabilityDialog.ui
+++ b/plugins/Observability/src/gui/ObservabilityDialog.ui
@@ -170,7 +170,7 @@
          <item>
           <widget class="QCheckBox" name="Opposition">
            <property name="text">
-            <string>Date of Sun opposition</string>
+            <string>Date of largest separation to the Sun</string>
            </property>
           </widget>
          </item>
