--- a/plugins/Observability/Observability.qrc
+++ b/plugins/Observability/Observability.qrc
@@ -1,5 +1,5 @@
 <RCC>
-  <qresource prefix="observability" >
+  <qresource prefix="/observability" >
     <file>bt_observab_on.png</file>
     <file>bt_observab_off.png</file>
   </qresource>
