Planet rise/set/transits computed iteratively (better accuracy). Warnings from the compiler sorted out.

--- a/plugins/Observability/src/gui/ObservabilityDialog.ui
+++ b/plugins/Observability/src/gui/ObservabilityDialog.ui
@@ -177,7 +177,7 @@
          <item>
           <widget class="QCheckBox" name="Goods">
            <property name="text">
-            <string>Range of observable epochs</string>
+            <string>Nights with the source above horizon</string>
            </property>
           </widget>
          </item>
