Initial working merge of solar system shadow work, float texture code not moved to Renderer API yet.

--- a/src/gui/configurationDialog.ui
+++ b/src/gui/configurationDialog.ui
@@ -129,6 +129,9 @@
       </property>
       <item row="1" column="0">
        <widget class="QStackedWidget" name="configurationStackedWidget">
+        <property name="currentIndex">
+         <number>2</number>
+        </property>
         <widget class="QWidget" name="page">
          <layout class="QVBoxLayout" name="verticalLayout_10">
           <property name="spacing">
@@ -825,6 +828,16 @@
              <property name="margin">
               <number>0</number>
              </property>
+             <item row="1" column="0">
+              <widget class="QCheckBox" name="diskViewportCheckbox">
+               <property name="toolTip">
+                <string>Mask out everything outside a central circle in the main view</string>
+               </property>
+               <property name="text">
+                <string>Disc viewport</string>
+               </property>
+              </widget>
+             </item>
              <item row="0" column="0">
               <widget class="QCheckBox" name="sphericMirrorCheckbox">
                <property name="toolTip">
@@ -845,26 +858,6 @@
                </property>
               </widget>
              </item>
-             <item row="4" column="0" colspan="2">
-              <widget class="QCheckBox" name="autoZoomResetsDirectionCheckbox">
-               <property name="toolTip">
-                <string>When enabled, the &quot;auto zoom out&quot; key will also set the initial viewing direction</string>
-               </property>
-               <property name="text">
-                <string>Auto zoom out returns to initial direction of view</string>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="0">
-              <widget class="QCheckBox" name="diskViewportCheckbox">
-               <property name="toolTip">
-                <string>Mask out everything outside a central circle in the main view</string>
-               </property>
-               <property name="text">
-                <string>Disc viewport</string>
-               </property>
-              </widget>
-             </item>
              <item row="3" column="0">
               <widget class="QCheckBox" name="selectSingleConstellationButton">
                <property name="statusTip">
@@ -872,6 +865,23 @@
                </property>
                <property name="text">
                 <string>Select single constellation</string>
+               </property>
+              </widget>
+             </item>
+             <item row="6" column="0">
+              <widget class="QCheckBox" name="renderSolarShadowsCheckbox">
+               <property name="text">
+                <string>Render Solar Shadows</string>
+               </property>
+              </widget>
+             </item>
+             <item row="5" column="0">
+              <widget class="QCheckBox" name="autoZoomResetsDirectionCheckbox">
+               <property name="toolTip">
+                <string>When enabled, the &quot;auto zoom out&quot; key will also set the initial viewing direction</string>
+               </property>
+               <property name="text">
+                <string>Auto zoom out returns to initial direction of view</string>
                </property>
               </widget>
              </item>
