--- a/src/gui/searchDialogGui.ui
+++ b/src/gui/searchDialogGui.ui
@@ -750,19 +750,29 @@
       <attribute name="title">
        <string>Lists</string>
       </attribute>
-      <layout class="QVBoxLayout" name="verticalLayout_7">
-       <item>
+      <layout class="QGridLayout" name="gridLayout_3">
+       <property name="sizeConstraint">
+        <enum>QLayout::SetDefaultConstraint</enum>
+       </property>
+       <item row="0" column="0" colspan="2">
         <widget class="QComboBox" name="objectTypeComboBox"/>
        </item>
-       <item>
+       <item row="2" column="0" colspan="3">
+        <widget class="QListWidget" name="objectsListWidget"/>
+       </item>
+       <item row="0" column="2">
+        <widget class="QCheckBox" name="searchInEnglishCheckBox">
+         <property name="text">
+          <string>names in English</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0" colspan="3">
         <widget class="QLineEdit" name="searchInListLineEdit">
          <property name="placeholderText">
           <string>Search in list...</string>
          </property>
         </widget>
-       </item>
-       <item>
-        <widget class="QListWidget" name="objectsListWidget"/>
        </item>
       </layout>
      </widget>
