--- a/src/gui/searchDialogGui.ui
+++ b/src/gui/searchDialogGui.ui
@@ -755,7 +755,14 @@
         <enum>QLayout::SetDefaultConstraint</enum>
        </property>
        <item row="0" column="0" colspan="2">
-        <widget class="QComboBox" name="objectTypeComboBox"/>
+        <widget class="QComboBox" name="objectTypeComboBox">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+        </widget>
        </item>
        <item row="2" column="0" colspan="3">
         <widget class="QListWidget" name="objectsListWidget"/>
