--- a/plugins/Observability/src/gui/ObservabilityDialog.ui
+++ b/plugins/Observability/src/gui/ObservabilityDialog.ui
@@ -370,7 +370,7 @@
      </widget>
      <widget class="QWidget" name="aboutTab">
       <attribute name="title">
-       <string>About</string>
+       <string comment="tab in plugin windows">About</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_11">
        <property name="spacing">
