--- a/plugins/Observability/src/gui/ObservabilityDialog.ui
+++ b/plugins/Observability/src/gui/ObservabilityDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>530</width>
-    <height>560</height>
+    <width>528</width>
+    <height>556</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -239,10 +239,13 @@
          </item>
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout">
-           <item alignment="Qt::AlignRight">
+           <item>
             <widget class="QLabel" name="label">
              <property name="text">
               <string>Red</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
             </widget>
            </item>
@@ -263,10 +266,13 @@
          </item>
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_2">
-           <item alignment="Qt::AlignRight">
+           <item>
             <widget class="QLabel" name="label_2">
              <property name="text">
               <string>Green</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
             </widget>
            </item>
@@ -281,10 +287,13 @@
          </item>
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_3">
-           <item alignment="Qt::AlignRight">
+           <item>
             <widget class="QLabel" name="label_3">
              <property name="text">
               <string>Blue</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
             </widget>
            </item>
@@ -302,10 +311,13 @@
          </item>
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_4">
-           <item alignment="Qt::AlignRight">
+           <item>
             <widget class="QLabel" name="label_4">
              <property name="text">
               <string>Font Size</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
             </widget>
            </item>
@@ -345,10 +357,13 @@
          </item>
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_5">
-           <item alignment="Qt::AlignRight">
+           <item>
             <widget class="QLabel" name="AltiText">
              <property name="text">
               <string>0 deg.</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
             </widget>
            </item>
