add edit shortcuts button to configuration dialog

--- a/src/gui/configurationDialog.ui
+++ b/src/gui/configurationDialog.ui
@@ -375,7 +375,7 @@
                 <string>Visual magnitude</string>
                </property>
                <attribute name="buttonGroup">
-                <string notr="true">buttonGroupDisplayedFields</string>
+                <string>buttonGroupDisplayedFields</string>
                </attribute>
               </widget>
              </item>
@@ -388,7 +388,7 @@
                 <string>Additional information 1</string>
                </property>
                <attribute name="buttonGroup">
-                <string notr="true">buttonGroupDisplayedFields</string>
+                <string>buttonGroupDisplayedFields</string>
                </attribute>
               </widget>
              </item>
@@ -398,7 +398,7 @@
                 <string>Additional information 3</string>
                </property>
                <attribute name="buttonGroup">
-                <string notr="true">buttonGroupDisplayedFields</string>
+                <string>buttonGroupDisplayedFields</string>
                </attribute>
               </widget>
              </item>
@@ -408,7 +408,7 @@
                 <string>Catalog number(s)</string>
                </property>
                <attribute name="buttonGroup">
-                <string notr="true">buttonGroupDisplayedFields</string>
+                <string>buttonGroupDisplayedFields</string>
                </attribute>
               </widget>
              </item>
@@ -418,7 +418,7 @@
                 <string>Name</string>
                </property>
                <attribute name="buttonGroup">
-                <string notr="true">buttonGroupDisplayedFields</string>
+                <string>buttonGroupDisplayedFields</string>
                </attribute>
               </widget>
              </item>
@@ -431,7 +431,7 @@
                 <string>Additional information 2</string>
                </property>
                <attribute name="buttonGroup">
-                <string notr="true">buttonGroupDisplayedFields</string>
+                <string>buttonGroupDisplayedFields</string>
                </attribute>
               </widget>
              </item>
@@ -441,7 +441,7 @@
                 <string>Absolute magnitude</string>
                </property>
                <attribute name="buttonGroup">
-                <string notr="true">buttonGroupDisplayedFields</string>
+                <string>buttonGroupDisplayedFields</string>
                </attribute>
               </widget>
              </item>
@@ -454,7 +454,7 @@
                 <string>Altitude/Azimuth</string>
                </property>
                <attribute name="buttonGroup">
-                <string notr="true">buttonGroupDisplayedFields</string>
+                <string>buttonGroupDisplayedFields</string>
                </attribute>
               </widget>
              </item>
@@ -467,7 +467,7 @@
                 <string>Size</string>
                </property>
                <attribute name="buttonGroup">
-                <string notr="true">buttonGroupDisplayedFields</string>
+                <string>buttonGroupDisplayedFields</string>
                </attribute>
               </widget>
              </item>
@@ -480,7 +480,7 @@
                 <string>Right ascension/Declination (of date)</string>
                </property>
                <attribute name="buttonGroup">
-                <string notr="true">buttonGroupDisplayedFields</string>
+                <string>buttonGroupDisplayedFields</string>
                </attribute>
               </widget>
              </item>
@@ -490,7 +490,7 @@
                 <string>Distance</string>
                </property>
                <attribute name="buttonGroup">
-                <string notr="true">buttonGroupDisplayedFields</string>
+                <string>buttonGroupDisplayedFields</string>
                </attribute>
               </widget>
              </item>
@@ -503,7 +503,7 @@
                 <string>Right ascension/Declination (J2000)</string>
                </property>
                <attribute name="buttonGroup">
-                <string notr="true">buttonGroupDisplayedFields</string>
+                <string>buttonGroupDisplayedFields</string>
                </attribute>
               </widget>
              </item>
@@ -516,7 +516,7 @@
                 <string>Hour angle/Declination</string>
                </property>
                <attribute name="buttonGroup">
-                <string notr="true">buttonGroupDisplayedFields</string>
+                <string>buttonGroupDisplayedFields</string>
                </attribute>
               </widget>
              </item>
@@ -561,6 +561,30 @@
                 <string>Enable mouse navigation</string>
                </property>
               </widget>
+             </item>
+             <item>
+              <layout class="QHBoxLayout" name="horizontalLayout_9">
+               <item>
+                <widget class="QPushButton" name="editShortcutsPushButton">
+                 <property name="text">
+                  <string>Edit keyboard shortcuts</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <spacer name="horizontalSpacer_4">
+                 <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>40</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                </spacer>
+               </item>
+              </layout>
              </item>
             </layout>
            </widget>
